# apollo3

./: .gitignore  CMakeLists.txt  Doxyfile.in  LICENSE  README.md
scripts/: movegen_diff.py  requirements.txt
src/: CMakeLists.txt  analysis.cc  analysis.h  analysis_test.cc  attacks.cc  attacks.h  bitboard.h  bitboard_test.cc  board_evaluator.h  log.h  main.cc  main_evaluate.cc  main_perft.cc  move.h  move_test.cc  movegen.cc  movegen.h  movegen_test.cc  perft_test.cc  piece.h  position.cc  position.h  position_test.cc  types.h  uci.cc  uci.h  util.h  zobrist.cc  zobrist.h
src/evaluators/: shannon_evaluator.cc  shannon_evaluator.h
src/search/: searcher.cc  searcher.h  transposition_table.cc  transposition_table.h
